--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -8,6 +8,7 @@ set(RESOURCE_LIST	${RESOURCE_PATH}/ac_load.cpp
 #					${RESOURCE_PATH}/server.cpp
 					${RESOURCE_PATH}/version.cpp
 					${RESOURCE_PATH}/discovery.cpp
+					${RESOURCE_PATH}/packets.cpp
 					)	
 
 idf_component_register(SRCS agro_mesh_main.cpp
