--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -9,16 +9,19 @@ set(RESOURCE_LIST	${RESOURCE_PATH}/ac_load.cpp
 					${RESOURCE_PATH}/version.cpp
 					${RESOURCE_PATH}/discovery.cpp
 					${RESOURCE_PATH}/packets.cpp
+					${RESOURCE_PATH}/ota.cpp
 					)	
 
 idf_component_register(SRCS agro_mesh_main.cpp
 							init_io.cpp  
+							types/rtc_time.cpp
 							net/coap_resources.cpp
 							net/init_mesh.cpp
 							net/tasks.cpp
 							net/messages/make.cpp
 							${RESOURCE_LIST}
 							helper/convert.cpp
+							ota/task.cpp
 							#							helper/decompose.cpp
                        INCLUDE_DIRS
                        REQUIRES)
