Added app support
* Added elf loader component;
* Made app manager;
* Added app resource

The limits were crossed...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,11 @@
 # in this exact order for cmake to work correctly
 cmake_minimum_required(VERSION 3.5)
 
-set(EXTRA_COMPONENT_DIRS components/peripherals
+set(EXTRA_COMPONENT_DIRS
+						components/peripherals
 						components/protocols 
-						components/modules)
+						components/modules
+						)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 project(agro_mesh)
