Fixed app errors
Limited 12 chars to app name;
Fixed append new app to app list

--- a/main/types/app/app_list/hello/Makefile
+++ b/main/types/app/app_list/hello/Makefile
@@ -3,7 +3,7 @@
 # project subdirectory.
 #
 
-PROJECT_NAME := hello_world
+PROJECT_NAME := hello
 
 module: ${PROJECT_NAME}.elf ${PROJECT_NAME}-readelf.txt ${PROJECT_NAME}-objdump.txt 
 
