--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -22,6 +22,7 @@ idf_component_register(SRCS main.cpp
 							types/app/task.cpp
 							sensor/sensor_type.cpp
 							sensor/read_sensor.cpp
+							sensor/helper.cpp
 							net/coap_resources.cpp
 							net/init_mesh.cpp
 							net/tasks.cpp
