--- a/components/agro_board/CMakeLists.txt
+++ b/components/agro_board/CMakeLists.txt
@@ -16,14 +16,4 @@ idf_component_register(SRCS board.cpp
                        			i2c_master 
                        			agro_mesh 
                        			dallas_temperature 
-                       			onewire 
-                       			coap-te)
-
-target_compile_options(${COMPONENT_LIB} 
-						PRIVATE -std=gnu++17
-						-DCOAP_TE_ESP_IDF_PLATAFORM=1
-						-DCOAP_TE_PORT_ESP_MESH=1
-						-DCOAP_TE_PORT_POSIX=1
-						-DCOAP_TE_PORT_C_STANDARD=1
-						-DCOAP_TE_LOG_LEVEL=${CONFIG_COAP_TE_LOG_LEVEL}
-						-DCOAP_TE_USE_SELECT=1)
+                       			onewire)
