--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,3 +16,5 @@ jobs:
           submodules: recursive
       - name: Build ESP32 latest
         uses: espressif/esp-idf-ci-action@latest
+        with:
+           path: '.'
