Ported to ESP-IDF 5.0-dev. Building but not tested.

--- a/components/agro_mesh/CMakeLists.txt
+++ b/components/agro_mesh/CMakeLists.txt
@@ -17,7 +17,8 @@ set(REQUIRE_LIST coap-te
                     ds3231
                     nvs_flash
                     app_update
-                    elfloader)
+                    elfloader
+                    efuse)
 
 ######################################
 # Modules
