--- a/components/peripherals/gpio/CMakeLists.txt
+++ b/components/peripherals/gpio/CMakeLists.txt
@@ -1,4 +1,4 @@
 idf_component_register(SRCS ./gpio.cpp
                        INCLUDE_DIRS include                       # Edit following two lines to set component requirements (see docs)
-                       REQUIRES )
+                       REQUIRES driver)
 
