--- a/components/basic_defines/CMakeLists.txt
+++ b/components/basic_defines/CMakeLists.txt
@@ -1,2 +1,3 @@
 idf_component_register(
-                       INCLUDE_DIRS include)
+                       INCLUDE_DIRS include
+                       REQUIRES)
