Code compiling with IDF 5.0 (not tested)

--- a/components/agro_mesh/CMakeLists.txt
+++ b/components/agro_mesh/CMakeLists.txt
@@ -18,7 +18,8 @@ set(REQUIRE_LIST coap-te
                     nvs_flash
                     app_update
                     elfloader
-                    efuse)
+                    efuse
+					esp_timer)
 
 ######################################
 # Modules
