--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,10 +5,7 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-#    strategy:
-#      fail-fast: false
-#      matrix:
-#         idf-version: [release-v4.4, release-v4.3]
+    container: rnascunha/agro_container:v5.0
     steps:
       - name: Checking out repostitory
         uses: actions/checkout@v2
@@ -17,5 +14,6 @@ jobs:
       - name: Prepare
         run: |
            cp sdkconfig-action sdkconfig
-      - name: Build ESP32 latest
-        uses: espressif/esp-idf-ci-action@latest
+      - name: Building
+        run: |
+          idf.py build
