--- a/components/elfloader/CMakeLists.txt
+++ b/components/elfloader/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "loader.c" "unaligned.c"
                        INCLUDE_DIRS .
-                       REQUIRES)
+                       REQUIRES vfs)
